Fix to bring back shaded background behind popup forms

--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,7 @@ body {
 }
 
 /*Forms*/
-.formPopup {
+.formWraps {
   background-color: rgba(0, 0, 0, 0.178);
   position: absolute;
   top: 0;
